# Conferences

Defcon/Defcon31/Part 1 - SimpleLoader/: main.c  sc.h
Defcon/Defcon31/Part 1 - SimpleLoader/snippets/: base64.c  encryptor.py  encryptor_entropy.py  encryptor_xor.py  nt.h  unhideBase64Entropy.c
Defcon/Defcon31/Part 1 - SimpleLoader/spoilers/: main.c  nt.h  sc.h
Defcon/Defcon31/Part 2 - DLL Injection/: main_moduleStomping.c
Defcon/Defcon31/Part 2 - DLL Injection/spoilers/: main.c
Defcon/Defcon31/Part 3 - Covering your tracks/snippets/: headers.h  hwbp.c
Defcon/Defcon31/Part 3 - Covering your tracks/spoilers/: main.c
Defcon/Defcon32/: .gitignore  readme.md
Defcon/Defcon32/Part 1 - AMSI/: readme.md
Defcon/Defcon32/Part 1 - AMSI/solutions/: loadlibrary.c  main.c
Defcon/Defcon32/Part 1 - AMSI/sources/: loadlibrary.h
Defcon/Defcon32/Part 2 - Integration with WIN32/solutions/: loadlibrary.c
Defcon/Defcon32/Part 2 - Integration with WIN32/sources/: winapi.h
Defcon/Defcon32/Part 3 - Limit of PEB integration/: readme.md
Defcon/Defcon32/Part 3 - Limit of PEB integration/solutions/: loadlibrary.c
Defcon/Defcon32/Part 3 - Limit of PEB integration/sources/: loadlibrary.h  main.c  msvc_api_definition.h
Defcon/Defcon32/Part 4 - Delayed loading and IAT/: readme.md
Defcon/Defcon32/Part 4 - Delayed loading and IAT/solutions/: loadlibrary.c
Defcon/Defcon32/Part 5 - APISet/: readme.md
Defcon/Defcon32/Part 6 - WinHTTP/sources/: CMakeLists.txt  main.c  peb.h
Defcon/Defcon33/: .gitignore  README.md
Defcon/Defcon33/1 - Syscall Hijack/solution/: CMakeLists.txt  hook.asm  main.c
Defcon/Defcon33/2 - DLL Proxying/solution/: CMakeLists.txt  dllmain.c
Defcon/Defcon33/3 - SetProcessInjection/sources/: CMakeLists.txt  aes.h  helpers.h  main.c  sc.h
Defcon/Defcon33/3 - SetProcessInjection/sources/payload/: encryptor.py  encryptor_remote.py
Defcon/Defcon33/4 - NirvanaSleep/sources/: CMakeLists.txt  common.h  hook.asm  main.c  utils.c  utils.h
Defcon31/: README.md
Defcon31/Part 0 - Presentation/: README.md
Defcon31/Part 1 - SimpleLoader/snippets/: processHandleByName.c  unxor.c
Defcon31/Part 2 - DLL Injection/: main.c
Defcon31/Part 2 - DLL Injection/snippets/: GetDLLBaseAddress.c  GetProcAddressEx.c  InjectDLL.c
Defcon31/Part 2 - DLL Injection/spoilers/: main_moduleStomping.c
Defcon31/Part 3 - Covering your tracks/: main.c
Defcon31/Part 3 - Covering your tracks/snippets/: LoadLibraryW.asm  ThreadlessInject.c  loadNtThings.c
Defcon32/: .gitignore
Defcon32/Part 1 - AMSI/sources/: CMakeLists.txt  loadlibrary.c  main.c
Defcon32/Part 2 - Integration with WIN32/: readme.md
Defcon32/Part 2 - Integration with WIN32/sources/: loadlibrary.h  main.c
Defcon32/Part 3 - Limit of PEB integration/sources/: loadlibrary.c
Defcon32/Part 4 - Delayed loading and IAT/solutions/: loadlibrary.h  winapi.h
Defcon32/Part 5 - APISet/sources/: CMakeLists.txt  loadlibrary.c  main.c
Defcon32/Part 6 - WinHTTP/: readme.md
Defcon32/Part 6 - WinHTTP/solutions/: loadlibrary.c  winapi.h
Defcon32/Part 6 - WinHTTP/sources/: utils.h  winapi.c
(+17 files in other folders)
